# ipc

./: .clang-format  .clang-tidy  .gitignore  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  README.md
.githooks/: pre-commit
.github/workflows/: ci-ubuntu.yml
cmake/: CodeQuality.cmake  CompilerWarnings.cmake  GitHooks.cmake
scripts/: ci-local.sh  clean-shm.sh  setup.sh
src/: main.cpp
src/common/: app_config.h  cli.cpp  cli.h
src/common/control/: control_panel.h  controller.cpp  controller.h  signal_handler.cpp  signal_handler.h  stdin_watcher.cpp  stdin_watcher.h
src/common/message/: checksum.cpp  checksum.h  header.h  message.h  message_validator.cpp  message_validator.h
src/common/transport/: blocking_ring_buffer.cpp  blocking_ring_buffer.h  control_block.cpp  control_block.h  mapped_segment.cpp  mapped_segment.h  named_semaphore.cpp  named_semaphore.h  ring_layout.h  shared_memory_transport.cpp  shared_memory_transport.h  transport.h
src/common/transport/shm/: blocking_ring_buffer.cpp  blocking_ring_buffer.h  control_block.cpp  control_block.h  mapped_segment.cpp  mapped_segment.h  named_semaphore.cpp  named_semaphore.h  ring_layout.h  shared_memory_transport.cpp  shared_memory_transport.h
src/common/util/: cli.cpp  cli.h  clock.cpp  clock.h  posix.h  process.cpp  process.h  rand.h  scope_exit.h
src/consumer/: app.cpp  app.h  command_line_parser.cpp  command_line_parser.h  config.h  main.cpp  stats_reporter.cpp  stats_reporter.h  transfer_engine.cpp  transfer_engine.h
src/producer/: app.cpp  app.h  command_line_parser.cpp  command_line_parser.h  config.h  deterministic_payload_generator.cpp  deterministic_payload_generator.h  main.cpp  payload_generator.h  transfer_engine.cpp  transfer_engine.h
src/producer/payload/: deterministic_payload_generator.cpp  deterministic_payload_generator.h  payload_generator.h  payload_generator_factory.cpp  payload_generator_factory.h
tests/: atomic_visibility_test.cpp  end_to_end_test.cpp
